--- a/Chatbot/templates/chatbot.html
+++ b/Chatbot/templates/chatbot.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-md-1">
                   <br/>
-                  <h4><a href="https://infoscience.epfl.ch/record/256467?&ln=en">Paper</a></h4>
+                  <h4><a href="https://infoscience.epfl.ch/record/256467?&ln=en">Report</a></h4>
                 </div>
                 <div class="col-md-1">
                   <br/>
