--- a/Chatbot/templates/chatbot.html
+++ b/Chatbot/templates/chatbot.html
@@ -45,12 +45,13 @@
                   <h4><a href="https://www.youtube.com/watch?v=ht03dVRmYmQ">Video Presentation</a></h4>
                 </div>
               </div>
-              <div class="row align-items-center">
-                <b>This Chatbot is trained on an <a href="https://wrongplanet.net/forums/">online forum</a> for parents of children with <a href="https://en.wikipedia.org/wiki/Autism">Autism</a>.</b>
+              <div class="row">
+                <p>
+                <b>This Chatbot is trained on an online forum for parents of children with Autism.</b>
                 <br/>
                 <b>Ask the Chatbot questions, and give it a few explanations afterwards if you so wish.</b>
                 <br/>
-                <b>The Chatbot tries to answer in {{ max_sentences }} sentence(s), but you can ask it "Answer me in X sentences" to change that parameter.</b>
+                <b>The Chatbot tries to answer in {{ max_sentences }} sentence(s), but you can ask it "Answer me in X sentences" to change that parameter.</b></p>
               </div>
           </header>
           <div class="row">
